Offset Children option in Object Data > Path Animation Panel when curve selected #38450

Closed
opened 2014-02-02 18:06:59 +01:00 by Terry Wallwork · 10 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender 2.69 GIT Rev 2014-02-02-21-33-52-41cc86a
on a Fedora 20 64bit box with and Intel 3000HD GFX.

I noticed that according to commit log:

https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=41573

The TimeOffset option feature was removed from Blender

According to wiki docs for 2.6 the option used to be in the Animation Hacks Panel (Now relationships extras).

http://wiki.blender.org/index.php/Doc:2.6/Manual/Animation/Techs/Object/Path

And indeed in recent versions of Blender the value has gone from the relationships extra panel.

But there is an Offset Children option in the Object Data panel when a Curve/Path is selected.
Should this option be removed or is it a different option.

See attached screenshot.

system-info.txt

Offset_Children_-Should_no_longer_be_there.png

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender 2.69 GIT Rev 2014-02-02-21-33-52-41cc86a on a Fedora 20 64bit box with and Intel 3000HD GFX. I noticed that according to commit log: https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=41573 The TimeOffset option feature was removed from Blender According to wiki docs for 2.6 the option used to be in the Animation Hacks Panel (Now relationships extras). http://wiki.blender.org/index.php/Doc:2.6/Manual/Animation/Techs/Object/Path And indeed in recent versions of Blender the value has gone from the relationships extra panel. But there is an Offset Children option in the Object Data panel when a Curve/Path is selected. Should this option be removed or is it a different option. See attached screenshot. [system-info.txt](https://archive.blender.org/developer/F75806/system-info.txt) ![Offset_Children_-_Should_no_longer_be_there_.png](https://archive.blender.org/developer/F75807/Offset_Children_-_Should_no_longer_be_there_.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Added subscribers: @ideasman42, @brecht, @Sergey

Added subscribers: @ideasman42, @brecht, @Sergey

This indeed seems an unused flag.

@brecht, @ideasman42 any objection on removing it?

This indeed seems an unused flag. @brecht, @ideasman42 any objection on removing it?

Removing this is fine with me.

Removing this is fine with me.
Sergey Sharybin self-assigned this 2014-02-03 14:13:55 +01:00

Will do it then.

Will do it then.

This issue was referenced by blender/blender-addons-contrib@7fbb7e32fd

This issue was referenced by blender/blender-addons-contrib@7fbb7e32fd4e50357ca4079b70f2917f412bcfa2

This issue was referenced by 7fbb7e32fd

This issue was referenced by 7fbb7e32fd4e50357ca4079b70f2917f412bcfa2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7fbb7e32fd.

Closed by commit 7fbb7e32fd.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38450
No description provided.