Fix T38450: Remove unused Children Offset option

This option was only exposed to the interface and internally
was doing basically nothing.

Removing it to prevent artists from being confused.