source/blender/makesrna/intern/rna_curve.c
@@ -890,12 +890,6 @@ static void rna_def_path(BlenderRNA *UNUSED(brna), StructRNA *srna)
 	                         "Use the mesh bounds to clamp the deformation");
 	RNA_def_property_update(prop, 0, "rna_Curve_update_data");
 
-	prop = RNA_def_property(srna, "use_time_offset", PROP_BOOLEAN, PROP_NONE);
-	RNA_def_property_boolean_sdna(prop, NULL, "flag", CU_OFFS_PATHDIST);
-	RNA_def_property_ui_text(prop, "Offset Path Distance",
-	                         "Children will use TimeOffs value as path distance offset");
-	RNA_def_property_update(prop, 0, "rna_Curve_update_data");
-
 	prop = RNA_def_property(srna, "use_radius", PROP_BOOLEAN, PROP_NONE);
 	RNA_def_property_boolean_sdna(prop, NULL, "flag", CU_PATH_RADIUS);
 	RNA_def_property_ui_text(prop, "Radius", "Option for paths and curve-deform: "
